<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quotes Social</string>
    <string name="app_id">429670540499086</string>
    <string name="logo">logo</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="quoteHint">Quote</string>
    <string name="authorHint">By</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="yourquotes">Your Quotes</string>
    <string name="name">Name</string>
    <string name="openquote">openQuote</string>
    <string name="closequote">closequote</string>
    <string name="fbshare">fbshare</string>
    <string name="heart">heart</string>
    <string name="auth">- Author</string>
    <string name="quote">QuoteText</string>
    <string name="greyheart">heart</string>
    <string name="follow">follow</string>
    <string name="homeHeart">heart</string>
    <string name="livefeed">Live Feed</string>
    <string name="advicefeed">Advice Quotes</string>
    <string name="funnyfeed">Funny Quotes</string>
    <string name="lovefeed">Love Quotes</string>
    <string name="inspirationalfeed">Inspirational Quotes</string>
    <string name="moviefeed">Movie Quotes</string>
    <string name="pick_category">Enter the Quote and its Categories</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="category">Category</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="shareToFB">Share to Facebook</string>
    <string name="favorite">Favorite</string>
    <string name="defaultfavs">Favorites</string>
    <string name="app_label">Speakeasy</string>
    <string name="search_hint">Search person or quote</string>
    <string name="enter_quote">Enter quote</string>
    <string name="enter_author">Enter author</string>
    <string name="banner_ad_unit_id">ca-app-pub-5224158361540926/5747405893</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">All</string>
    <string name="configure">Which category would you like to see quotes from?</string>
    <string name="add_widget">Add widget</string>

</resources>
