<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/rectangle"
        android:paddingTop="5dp">

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/openQuote"
            android:layout_below="@+id/fbName"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/openquote"
            android:paddingLeft="10dp"
            android:src="@drawable/openquote"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quote"
            android:id="@+id/itemText"
            android:layout_alignTop="@+id/openQuote"
            android:layout_toRightOf="@+id/openQuote"
            android:textSize="20sp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:maxWidth="275dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/auth"
            android:id="@+id/itemAuthor"
            android:textSize="15sp"
            android:layout_below="@+id/itemText"
            android:layout_alignRight="@+id/itemText"
            android:textStyle="italic"/>

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/closeQuote"
            android:src="@drawable/closequote"
            android:contentDescription="@string/closequote"
            android:paddingLeft="15dp"
            android:layout_alignTop="@+id/itemText"
            android:layout_toRightOf="@+id/itemText"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:id="@+id/fbshare"
            android:src="@drawable/fbshare"
            android:contentDescription="@string/fbshare"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:focusable="false"
            android:paddingTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignBottom="@+id/homeFavorite"/>

    <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/homeFavorite"
            android:background="@drawable/greyheart"
            android:contentDescription="@string/homeHeart"
            android:paddingRight="5dp"
            android:layout_below="@+id/itemAuthor"
            android:layout_alignParentRight="true"
            android:paddingBottom="5dp"
            android:focusable="false"
            android:clickable="true"
            android:text="0"
            android:textSize="15sp"/>

</RelativeLayout>