<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/fbName"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"
            android:paddingTop="5dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/follow"
            android:src="@android:drawable/ic_input_add"
            android:paddingLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/fbName"
            android:focusable="false"
            android:contentDescription="@string/follow"
            android:clickable="true"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_alignParentLeft="true"
            android:background="@drawable/rectangle">

        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView"
                android:layout_below="@+id/fbName"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/openquote"
                android:paddingLeft="10dp"
                android:src="@drawable/openquote"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/quote"
                android:id="@+id/itemText"
                android:layout_alignTop="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:maxWidth="275dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/auth"
                android:id="@+id/itemAuthor"
                android:textSize="15sp"
                android:layout_below="@+id/itemText"
                android:layout_alignRight="@+id/itemText"
                android:textStyle="italic"/>

        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageView2"
                android:src="@drawable/closequote"
                android:contentDescription="@string/closequote"
                android:paddingLeft="15dp"
                android:layout_alignTop="@+id/itemText"
                android:layout_toRightOf="@+id/itemText"/>

        <ImageView
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:id="@+id/fbshare"
                android:src="@drawable/fbshare"
                android:contentDescription="@string/fbshare"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_below="@+id/itemAuthor"
                android:layout_alignParentLeft="true"
                android:focusable="false"
                android:paddingTop="5dp"/>

        <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/favorite"
                android:src="@drawable/greyheart"
                android:contentDescription="heart"
                android:scaleType="fitCenter"
                android:paddingRight="5dp"
                android:layout_below="@+id/itemAuthor"
                android:layout_alignParentRight="true"
                android:paddingBottom="5dp"
                android:focusable="false"
                android:clickable="true"/>
    </RelativeLayout>

</RelativeLayout>